--- a/03. Array Properties/Array Properties.ipynb
+++ b/03. Array Properties/Array Properties.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c39258b7-e54b-4250-92d1-579ff90d11a3",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "c30d9d4c-ad74-4e99-86ed-50e54d94e98c",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "0d4d75cf-5d39-4625-b83a-f10b0c3d3868",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "e446875d-92fc-4429-afdc-93bd43f0188a",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "12"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "114282f6-d611-4e23-bc12-ead03c90d62a",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "884be012-978d-4cc5-8724-36eb46ef89ca",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "5f17ab0e-9e26-4905-a25a-4a74c192352a",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "531639bf-e872-441f-af36-0469a98307c0",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "40082126-1c5d-4993-a8e3-188eb262a8c9",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "id": "4f3ce3d3-f8fe-476d-98fb-4ea1bd66d020",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "f6925c83-8bec-4baf-81af-399b8dc0eb5f",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "2ba26de2-5114-4c5c-8390-4bc554d76075",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m matrix\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeature matrix must be 2D\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[24], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m matrix\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeature matrix must be 2D\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mValueError\u001b[0m: Feature matrix must be 2D"
      ]
     }
@@ -785,19 +785,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "cab6e2bf-adcc-4373-98c1-824f815730dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.5 1.  1.5]\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Detect wrong dtype after division.\n",
     "x = np.array([1,2,3],dtype = np.int32)\n",
@@ -808,53 +799,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "75283365-56be-44fc-b878-7f535a0aabd6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before reshape:100\n",
-      "[[[[  1   2   3   4   5]\n",
-      "   [  6   7   8   9  10]\n",
-      "   [ 11  12  13  14  15]\n",
-      "   [ 16  17  18  19  20]\n",
-      "   [ 21  22  23  24  25]]\n",
-      "\n",
-      "  [[ 26  27  28  29  30]\n",
-      "   [ 31  32  33  34  35]\n",
-      "   [ 36  37  38  39  40]\n",
-      "   [ 41  42  43  44  45]\n",
-      "   [ 46  47  48  49  50]]]\n",
-      "\n",
-      "\n",
-      " [[[ 51  52  53  54  55]\n",
-      "   [ 56  57  58  59  60]\n",
-      "   [ 61  62  63  64  65]\n",
-      "   [ 66  67  68  69  70]\n",
-      "   [ 71  72  73  74  75]]\n",
-      "\n",
-      "  [[ 76  77  78  79  80]\n",
-      "   [ 81  82  83  84  85]\n",
-      "   [ 86  87  88  89  90]\n",
-      "   [ 91  92  93  94  95]\n",
-      "   [ 96  97  98  99 100]]]]\n",
-      "After reshape:100\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2, 2, 5, 5)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Reshape array and verify size unchanged.\n",
     "\n",
@@ -868,21 +816,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c6f04a31-9456-4d15-9ac9-0bdbf9af8800",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 4)\n",
-      "[[ 1  2  3  4]\n",
-      " [ 6  7  8  9]\n",
-      " [10 11 12 13]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Identify samples vs features using shape.\n",
     "\n",
@@ -896,21 +833,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a793084d-2530-43d8-95c2-088fb562182f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float32')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6. Convert int array to float for ML.\n",
     "arr = np.array([[1,2,3,4],\n",
@@ -929,13 +855,392 @@
     "2. Detect memory waste due to wrong dtype.\n",
     "3. Ensure batch input shape for neural network.\n",
     "4. Debug silent model failure using shape logs.\n",
-    "5. Compare performance using int32 vs float64.\n"
+    "5. Compare performance using int32 vs float64.\n",
+    "\n",
+    "### 1. Validate input for linear regression model.\n",
+    "\n",
+    "Linear Regression expects:\n",
+    "\n",
+    "- X → `(n_samples, n_features)`\n",
+    "- y → `(n_samples,)`\n",
+    "\n",
+    "If shape is wrong → model breaks or trains incorrectly.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "bc690e21-0a3c-4a86-bd42-ecf29cef14cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Example data\n",
+    "X = np.array([[12, 54, 23, 65],\n",
+    "              [54, 23, 66, 78]])\n",
+    "\n",
+    "y = np.array([12, 55])\n",
+    "\n",
+    "# Step 1: Print shapes\n",
+    "print(\"X shape:\", X.shape)\n",
+    "print(\"y shape:\", y.shape)\n",
+    "\n",
+    "# Step 2: Validate dimensions\n",
+    "\n",
+    "if X.ndim != 2:\n",
+    "    raise ValueError(\"X must be 2D (n_samples, n_features)\")\n",
+    "\n",
+    "if y.ndim != 1:\n",
+    "    raise ValueError(\"y must be 1D (n_samples,)\")\n",
+    "\n",
+    "# Step 3: Validate sample count\n",
+    "\n",
+    "if X.shape[0] != y.shape[0]:\n",
+    "    raise ValueError(\"Number of samples in X and y must match\")\n",
+    "\n",
+    "# Step 4: Validate dtype (convert if needed)\n",
+    "\n",
+    "if not np.issubdtype(X.dtype, np.floating):\n",
+    "    X = X.astype(np.float32)\n",
+    "\n",
+    "# Step 5: validate y dtype too\n",
+    "if not np.issubdtype(y.dtype, np.floating):\n",
+    "    y = y.astype(np.float32)\n",
+    "\n",
+    "print(\"Input is valid for Linear Regression.\")\n",
+    "print(\"Final dtype of X:\", X.dtype)\n",
+    "print(\"Final dtype of y:\", y.dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a7926c-97d0-45a2-85d2-ff64b099e86c",
+   "metadata": {},
+   "source": [
+    "### 2. Detect memory waste due to wrong dtype."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7f1dc031-07be-4c7a-891d-253e099fb74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.98227208  0.60211065  1.66191067  1.66378992 -0.13717581]\n",
+      " [ 0.35142993 -0.44495725 -0.11590561  1.33779163  1.15658559]\n",
+      " [ 0.00678415 -0.68680896  1.1273828   0.50477175  1.2062459 ]\n",
+      " ...\n",
+      " [ 2.13862087 -1.03417319 -0.64661254 -0.8903091   1.99816353]\n",
+      " [-1.14044776  0.         -1.4411906   0.          0.6385458 ]\n",
+      " [-0.60434978  0.53413451  0.38935087  0.18740994  1.82750591]]\n",
+      "float64 bytes:40000\n",
+      "float32 bytes:20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.genfromtxt(\"numeric_dataset_float64.csv\",delimiter=\",\",filling_values=\"0\",skip_header=1)\n",
+    "\n",
+    "print(data)\n",
+    "print(f\"float64 bytes:{data.nbytes}\") # here waste memory during float64 dtype \n",
+    "\n",
+    "data = data.astype(np.float32)\n",
+    "print(f\"float32 bytes:{data.nbytes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a3a6919-db03-43ae-93d6-9a0768d4fba2",
+   "metadata": {},
+   "source": [
+    "### 3. Ensure batch input shape for neural network.\n",
+    "\n",
+    "Neural Networks expect:\n",
+    "\n",
+    "- `(batch_size, features)`\n",
+    "\n",
+    "Common mistake:\n",
+    "\n",
+    "- Passing single sample as `(features,)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7b4ad7b5-8611-48d9-810e-a64cb78a7223",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10,)\n",
+      "1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Btach must be 2D",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# That is wrong.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m batch\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m---> 10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBtach must be 2D\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Btach must be 2D"
+     ]
+    }
+   ],
+   "source": [
+    "batch = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "\n",
+    "# Detect Problem\n",
+    "\n",
+    "print(batch.shape)\n",
+    "print(batch.ndim) \n",
+    "# That is wrong.\n",
+    "\n",
+    "if batch.ndim != 2:\n",
+    "    raise ValueError(\"Btach must be 2D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fd146b14-650f-4eed-b499-0637560611a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 10)\n",
+      "2\n",
+      "Batch is valid for nural network input\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fix\n",
+    "batch = batch.reshape(1,-1)\n",
+    "\n",
+    "print(batch.shape)\n",
+    "print(batch.ndim)\n",
+    "\n",
+    "if batch.ndim != 2:\n",
+    "    raise ValueError(\"Batch must be 2D\")\n",
+    "else:\n",
+    "    print(\"Batch is valid for nural network input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5317369d-bb8f-423e-9bdc-006d50bc8eb9",
+   "metadata": {},
+   "source": [
+    "### 4. Debug silent model failure using shape logs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9fad0645-0713-431f-bddd-09eb8717c66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full data shape:(100, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Load CSV File\n",
+    "\n",
+    "data = np.genfromtxt(\"dataset_100_samples_X_y_float64.csv\",delimiter=\",\",skip_header=1,dtype=np.float32,missing_values=0)\n",
+    "print(f\"Full data shape:{data.shape}\")\n",
+    "\n",
+    "# Step 2: Split into X and y\n",
+    "\n",
+    "x = data[:,:-1]\n",
+    "y = data[:,-1]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fb999d5-af41-4155-bce0-105f4aa82bae",
+   "metadata": {},
+   "source": [
+    "How This Works (Important)\n",
+    "\n",
+    "`data[:, :-1]`\n",
+    "\n",
+    "- `:` → all rows\n",
+    "\n",
+    "- `:-1` → all columns except last\n",
+    "\n",
+    "- Result → 2D array\n",
+    "\n",
+    "`data[:, -1]`\n",
+    "\n",
+    "- `:` → all rows\n",
+    "\n",
+    "- `-1` → last column\n",
+    "\n",
+    "- Result → 1D array\n",
+    "\n",
+    "This automatically gives correct ML format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f3b55ff5-0c0a-4e00-96f1-14a6e59af9f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 5)\n",
+      "(100,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3: Validate for Linear Regression\n",
+    "\n",
+    "if x.ndim != 2:\n",
+    "    raise ValueError(\"X must be 2D\")\n",
+    "if y.ndim != 1:\n",
+    "    raise ValueError(\"Y must be 1D\")\n",
+    "if x.shape[0] != y.shape[0]:\n",
+    "    raise ValueError(\"sample count mismatch\")\n",
+    "\n",
+    "print(x.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d4b1ba0b-e6f2-4c7b-a26e-320fed5565b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float32\n",
+      "float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 4: Ensure dtype is float32 (Better for ML)\n",
+    "\n",
+    "print(x.dtype)\n",
+    "print(y.dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b08b6f6e-8465-4cc3-b2cb-b446693fd3e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final shape x:(100, 5) & y:(100,)\n",
+      "Final dtype x:float32 & y:float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Final shape x:{x.shape} & y:{y.shape}\")\n",
+    "print(f\"Final dtype x:{x.dtype} & y:{y.dtype}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e7ec10c-60d6-4a94-ab2c-0ab2930d6f86",
+   "metadata": {},
+   "source": [
+    "### 5. Compare performance using int32 vs float64."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f1d37216-c715-489e-9f3c-0ad0698bf382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Create large array\n",
+    "X1 = np.random.randint(0, 100, size=(10000, 1000), dtype=np.int32)\n",
+    "X2 = X1.astype(np.float64)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "00635cb8-9f95-4b89-8ea1-bcda5c211b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32 bytes: 40000000\n",
+      "float64 bytes: 80000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Check memory\n",
+    "print(\"int32 bytes:\", X1.nbytes)\n",
+    "print(\"float64 bytes:\", X2.nbytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ee57e3ab-263f-4889-9d1f-3897ce459bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32 time: 0.019510984420776367\n",
+      "float64 time: 0.0177919864654541\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3: Timing test\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "np.sum(X1)\n",
+    "print(\"int32 time:\", time.time() - start)\n",
+    "\n",
+    "start = time.time()\n",
+    "np.sum(X2)\n",
+    "print(\"float64 time:\", time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d26d52-c50c-49a9-b3cf-8e745fafb2af",
    "metadata": {},
    "outputs": [],
    "source": []
