Add notebook on additional NumPy array properties
Add a new notebook (03. Array Properties/Additional Array Properties.ipynb) that documents NumPy array properties (itemsize, nbytes, T, strides, flags) with examples and explanations about memory layout. Update Array Properties.ipynb to adjust execution counts and add a small cell transposing x (x = x.T) to fix shape for ML usage. Remove the empty/placeholder Untitled.ipynb file.

--- a/03. Array Properties/Array Properties.ipynb
+++ b/03. Array Properties/Array Properties.ipynb
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "f3b55ff5-0c0a-4e00-96f1-14a6e59af9f4",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "d4b1ba0b-e6f2-4c7b-a26e-320fed5565b9",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "b08b6f6e-8465-4cc3-b2cb-b446693fd3e2",
    "metadata": {},
    "outputs": [
@@ -1164,8 +1164,28 @@
     }
    ],
    "source": [
-    "print(f\"Final shape x:{x.shape} & y:{y.shape}\")\n",
-    "print(f\"Final dtype x:{x.dtype} & y:{y.dtype}\")\n"
+    "print(f\"Final shape x:{x.shape} & y:{y.shape}\")# this shape is not fit for ml model\n",
+    "print(f\"Final dtype x:{x.dtype} & y:{y.dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a89b2626-2fdd-46d9-b740-c411d75198bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = x.T \n",
+    "\n",
+    "print(x.shape)"
    ]
   },
   {
